--- a/app/src/main/assets/changelog.txt
+++ b/app/src/main/assets/changelog.txt
@@ -6,11 +6,19 @@
 
 更新日志
 
-版本名称：2.5.9
-版本号：14
-更新日期：20170502
 
-1、Fix 7.x choose file FC
+版本名称：2.7.10
+版本号：15
+更新日期：201705019
+
+1、修复 7.x 选择文件停止运行
+
+版本名称：2.6.9
+版本号：14
+更新日期：20161119
+
+1、修复 Cpio 编辑器打开问题
+
 
 
 版本名称：2.5.8
